infra/forgesphere/nginx/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-gateway
  namespace: forgestudio-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-gateway
  template:
    metadata:
      labels:
        app: nginx-gateway
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: nginx
          image: nginx:1.25

          ports:
            - containerPort: 80

          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true

            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE

          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf

            - name: tmp
              mountPath: /tmp

            - name: cache
              mountPath: /var/cache/nginx

            - name: run
              mountPath: /var/run

      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config

        - name: tmp
          emptyDir: {}

        - name: cache
          emptyDir: {}

        - name: run
          emptyDir: {}
