infra/forgesphere/nginx/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway-svc
  namespace: forgestudio-prod
spec:
  selector:
    app: nginx-gateway
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
